# GoatedChess

./: Application.cpp  Application.h  CMakeLists.txt  README  imgui.ini  log.txt  main_macos.cpp  main_win32.cpp
.cache/clangd/index/: Application.cpp.F0356C6251FCA2D1.idx  Application.h.575AAC25BFF5B8CD.idx  Bit.cpp.E838D382B9316CBC.idx  Bit.h.23C41BD775FA01AE.idx  BitHolder.cpp.DF87BE9FC25C9221.idx  BitHolder.h.25E4CF0783356763.idx  Chess.cpp.352EF8BA05993D6E.idx  Chess.h.8F77644A30820F7D.idx  ChessSquare.cpp.F95B34A4D34FE3FC.idx  ChessSquare.h.2305378ED63A848B.idx  Entity.h.25EF282DA35A92BD.idx  Evaluate.h.F70A40DAA9F133AF.idx  Game.cpp.F588F4F34B70CE8D.idx  Game.h.FDF39B32A083E0DC.idx  Log.cpp.EAF40D9FA147CBA3.idx  Log.h.3A192D28E783E5F8.idx  Player.h.3077D6747712C3FE.idx  Sprite.cpp.380388E64119C12B.idx  Sprite.h.4584DB29A54F30DA.idx  Square.cpp.C0973815FD4DBD54.idx  Square.h.5CBDA351778D978F.idx  TTC.cpp.BC52B5A3FBFF5A46.idx  TTC.h.D892AFEA57468C55.idx  Turn.h.99357C7B72B2AD0C.idx  UCI.cpp.7B6D4FEF736FC344.idx  UCI.h.A30881FFA99D59D6.idx  imconfig.h.8286811889825548.idx  imgui.cpp.2A54BF3E1369C734.idx  imgui.h.5D27B404705E2BF5.idx  imgui_demo.cpp.F1874C66D958E715.idx  imgui_draw.cpp.A5C63E7E7D72518F.idx  imgui_impl_glfw.cpp.2A51CCCE5B3E08DF.idx  imgui_impl_glfw.h.259ACC67AF708556.idx  imgui_impl_opengl3.cpp.6789E72FC862061E.idx  imgui_impl_opengl3.h.674B21319351A3BA.idx  imgui_impl_opengl3_loader.h.79D533476356681C.idx  imgui_internal.h.84E620BA36E95B80.idx  imgui_tables.cpp.459B8B174A1A3B9B.idx  imgui_widgets.cpp.ADDC10B9293EA076.idx  imstb_rectpack.h.991F885FA22EBC4C.idx  (+4 more)
classes/: Bit.cpp  Bit.h  BitHolder.cpp  Chess.cpp  Chess.h  ChessSquare.cpp  Evaluate.h  Game.cpp  Game.h  Log.cpp  Log.h  Player.h  RockPaperScissors.cpp  RockPaperScissors.h  Square.cpp  Square.h  TTC.cpp  TTC.h  Turn.h  UCI.cpp  UCI.h  copy.cpp  imgui.ini
